# learn-rust-by-example

./: .gitignore  Cargo.toml  README.md
1-hello-world/: formatt.rs
2-primitives/: arrays_slices.rs
ch1-hello-world/: format.rs
ch10-modules/: Cargo.toml
ch10-modules/src/: main.rs
ch10-modules/src/dir_mod/: inaccessible.rs  mod.rs  nested.rs
ch11-crates/: executable.rs  rary.rs
ch14-generics/: Cargo.toml
ch14-generics/src/: associatedtype.rs  bounds.rs  main.rs  newtype.rs  phantomdata.rs
ch15-scoping-rules/: Cargo.toml
ch15-scoping-rules/src/: borrowing.rs  lifetimes.rs  main.rs
ch16-traits/: Cargo.toml
ch16-traits/src/: main.rs
ch17-macro/: Cargo.toml
ch17-macro/src/: dry.rs  dsl.rs  main.rs
ch18-error-handling/: Cargo.toml
ch18-error-handling/src/: main.rs  mixed_error_type.rs  option.rs  result.rs
ch19-std/: Cargo.toml
ch19-std/src/: box.rs  hashmap.rs  hashset.rs  result.rs  strings.rs  vectors.rs
ch2-primitives/: integers.rs  tuples.rs
ch20-std-misc/: Cargo.toml
ch20-std-misc/src/: args.rs  channels.rs  child_processes.rs  ffi.rs  file.rs  file_operations.rs  path.rs  threads.rs
ch21-testing/src/: unit.rs
ch3-custom-types/: Cargo.toml
ch3-custom-types/src/: main.rs
ch4-variable-bindings/: Cargo.toml
ch4-variable-bindings/src/: main.rs
ch5-types/: Cargo.toml
ch5-types/src/: main.rs
ch6-conversion/: Cargo.toml
ch6-conversion/src/: main.rs
ch7-expressions/: main.rs
ch8-flow-control/: Cargo.toml
ch8-flow-control/src/: main.rs
ch9-functions/: Cargo.toml
ch9-functions/src/: closures.rs  hofs.rs  main.rs
