[workspace]
members = [
  "ch3-custom-types",
  "ch4-variable-bindings",
  "ch5-types",
  "ch6-conversion",
  "ch8-flow-control",
  "ch9-functions",
  "ch10-modules"
]
[package]
name = "learn-rust-by-example"
version = "0.1.0"
authors = ["Johny.li <johny.li@selmit.com>"]
edition = "2018"

[dependencies]
